--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#141A33"
+    android:background="@color/white"
+    android:textAlignment="textStart"
+    android:textDirection="ltr"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/app_title"
-        android:text="@string/app_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.107"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        style="@style/MainTextStyle" />
+    <!--    <TextView-->
+    <!--        android:id="@+id/app_title"-->
+    <!--        style="@style/MainTextStyle"-->
+    <!--        android:text="@string/app_title"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="0.107"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/lineNumberRows"
+        android:layout_width="40dp"
+        android:layout_height="589dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="142dp"
+        android:background="#eeeeee"
+        android:gravity="center_horizontal"
+        android:paddingVertical="12sp"
+        android:text="@string/line_number"
+        android:textColor="#616161"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/codeEditorText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0sp"
+        android:layout_marginTop="1sp"
+        android:layout_marginEnd="1sp"
+        android:layout_toEndOf="@+id/lineNumberRows"
+        android:autofillHints="true"
+        android:ems="10"
+        android:fontFamily="@font/droid_sans_mono"
+        android:gravity="start|fill_horizontal"
+        android:hint="@string/hello_world_hint"
+        android:inputType="textMultiLine"
+        android:minHeight="48dp"
+        android:padding="10sp"
+        android:singleLine="true"
+        android:textColorHighlight="#5367DF"
+        android:textColorHint="#C3C3C3"
+        android:textColorLink="#5E35B1"
+        android:textSize="16sp"
+        tools:ignore="TextContrastCheck" />
+
+    <TextView
+        android:id="@+id/console"
+        android:layout_toEndOf="@id/codeEditorText"
+        android:layout_width="match_parent"
+        android:layout_height="97dp"
+        android:layout_below="@+id/lineNumberRows"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="20sp"
+        android:layout_marginBottom="40sp"
+        android:text="TextView" />
+
+
+</RelativeLayout>
