--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
 
     <TextView
         android:id="@+id/lineNumberRows"
+        android:fontFamily="@font/droid_sans_mono"
         android:layout_width="35dp"
         android:layout_height="462dp"
         android:layout_marginTop="64dp"
